<!--
  ~ WiFiAnalyzer
  ~ Copyright (C) 2019 VREM Software Development <VREMSoftwareDevelopment@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>
        <!-- https://stackoverflow.com/questions/31874929/how-to-show-app-version-on-preferences-activity -->
        <PreferenceScreen
            android:summary="1.0.0"
            android:title="@string/version" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/language_key"
            android:summaryOff="@string/language_chinese"
            android:summaryOn="@string/language_english"
            android:switchTextOff="@string/language_chinese"
            android:switchTextOn="@string/language_english"
            android:title="@string/language_title" />
        <SeekBarPreference
            android:title="@string/text_size"
            android:max="6" />
        <SeekBarPreference
            android:title="@string/button_size"
            android:max="6" />
        <com.vrem.wifianalyzer.settings.ResetSetting
            android:title="@string/reset"
            android:defaultValue="" />
    </PreferenceCategory>
</PreferenceScreen>