<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D8D8D8"
        android:padding="@dimen/fab_margin"
        android:text="@string/title_forum"
        android:textColor="@color/textRed"
        android:textSize="25sp"
        app:fontFamily="@font/sf_pro_display_bold" />

    <LinearLayout
        android:id="@+id/tToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:background="@drawable/recyclerview_category_collapse_borderline"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_weight="0.7"
            android:text="標題"
            android:textColor="@color/textRed"
            android:textSize="25sp"
            app:fontFamily="@font/sf_pro_display_bold" />

        <TextView
            android:id="@+id/respond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/fab_margin"
            android:background="@drawable/button"
            android:gravity="center_vertical"
            android:padding="10sp"
            android:text="@string/respond"
            android:textColor="@color/textRed"
            android:textSize="20sp"
            app:fontFamily="@font/sf_pro_display_bold" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/forum_index_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bToolbar"
        android:layout_below="@id/tToolbar"
        android:layout_marginStart="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="5sp"
        android:background="@drawable/recyclerview_category_collapse_borderline"
        android:padding="5sp" />

    <LinearLayout
        android:id="@+id/bToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:background="@drawable/button"
            android:gravity="center_vertical"
            android:padding="10sp"
            android:text="@string/back"
            android:textColor="@color/textRed"
            android:textSize="20sp"
            app:fontFamily="@font/sf_pro_display_bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="1/1"
            android:textColor="@color/textRed"
            android:textSize="20sp"
            app:fontFamily="@font/sf_pro_display_bold" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:background="@drawable/button"
            android:gravity="center_vertical"
            android:padding="10sp"
            android:text="@string/next"
            android:textColor="@color/textRed"
            android:textSize="20sp"
            app:fontFamily="@font/sf_pro_display_bold" />
    </LinearLayout>
</RelativeLayout>