<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/canemovie"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:id="@+id/drawer_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imageView2"
        android:layout_alignLeft="@id/drawer_help"
        android:orientation="horizontal"
        android:layout_alignStart="@id/drawer_help">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/ic_privacy"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_privacy"
            android:textColor="@color/textRed"
            android:textSize="18sp"
            app:fontFamily="@font/sf_pro_display_light" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/drawer_privacy"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/ic_help_black_24dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_help"
            android:textColor="@color/textRed"
            android:textSize="18sp"
            app:fontFamily="@font/sf_pro_display_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/drawer_help"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/ic_settings_black_24dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:textColor="@color/textRed"
            android:textSize="18sp"
            app:fontFamily="@font/sf_pro_display_light" />
    </LinearLayout>

</RelativeLayout>